Change naming entirely

--- a/languages/mono-hire-purchase-uk.po
+++ b/languages/mono-hire-purchase-uk.po
@@ -13,14 +13,8 @@ msgstr ""
 "X-Domain: restare-mono-pay-part\n"
 "Plural-Forms: nplurals=3; plural=(n%10==1 && n%100!=11 ? 0 : n%10 >= 2 && "
 "n%10<=4 &&(n%100<10||n%100 >= 20)? 1 : 2);\n"
-"PO-Revision-Date: 2024-09-13 21:10+0000\n"
+"PO-Revision-Date: 2024-09-13 22:56+0000\n"
 "X-Loco-Version: 2.6.11; wp-6.6.2"
-
-#: includes/class.part-pay-method.php:20
-msgid "Allows customers to pay using Mono Part Pay Method."
-msgstr ""
-"Дозволити користувачам обрати \"Покупку частинами\" та обрати бажану "
-"кількість платежів"
 
 #: includes/class.admin-wc-order.php:111
 msgid "Application status"
@@ -34,10 +28,6 @@ msgstr "Подача заявки"
 msgid "Available Parts"
 msgstr "Доступна кількість платежів"
 
-#: includes/class.part-pay-method.php:108
-msgid "Awaiting Mono Part Pay payment acceptance"
-msgstr "Очікується підтвердження \"Покупки частинами\" від банку"
-
 #: includes/class.admin-wc-order.php:134
 msgid "Check Mono Order Status"
 msgstr "Перевірити статус заявки"
@@ -50,18 +40,6 @@ msgstr "Виберіть зображення"
 msgid "Confirm Shipment"
 msgstr "Підтвердити видачу товару клієнтові"
 
-#: includes/class.part-pay-method.php:54
-msgid "Description"
-msgstr "Опис"
-
-#: includes/class.part-pay-method.php:75
-msgid "Desired payments number"
-msgstr "Бажана кількість платежів"
-
-#: includes/class.part-pay-method.php:43
-msgid "Enable Mono Part Pay Method"
-msgstr "Увімкнути \"Покупку частинами\""
-
 #: includes/class.settings.php:52
 msgid "Enable Part Pay Method"
 msgstr "Активувати платіжний метод"
@@ -70,23 +48,30 @@ msgstr "Активувати платіжний метод"
 msgid "Enable Test Mode"
 msgstr "Активувати тестовий режим"
 
-#: includes/class.part-pay-method.php:41
-msgid "Enable/Disable"
-msgstr "вкл/викл"
-
 #: includes/class.settings.php:365
 msgid "Enter comma-separated numbers between 3 and 25."
 msgstr "Введіть перелік кількості платежів через кому від 3 до 25"
 
 #: includes/class.settings.php:273
+#| msgid ""
+#| "For more information about the Mono Pay-part API, please refer to the "
+#| "official documentation."
 msgid ""
-"For more information about the Mono Pay-part API, please refer to the "
+"For more information about the Mono Hire Purchase API, please refer to the "
 "official documentation."
 msgstr "Для більш детальної інформації – ознайомтесь із офіційною доументацією"
 
 #. URI of the plugin
 msgid "https://pkotula.com/"
 msgstr "https://pkotula.com/"
+
+#: includes/class.settings.php:20
+msgid "Mono Hire Purchase"
+msgstr "Покупка частинами монобанк"
+
+#: includes/class.settings.php:19 includes/class.settings.php:261
+msgid "Mono Hire Purchase Settings"
+msgstr "Налаштування покупки частинами монобанк"
 
 #: includes/class.admin-wc-order.php:121
 msgid "Mono Order Shipment Status:"
@@ -112,10 +97,6 @@ msgstr "Банер для \"Покупки частинами\""
 msgid "Mono Part Pay finished. Shipment confirmed by shop admin"
 msgstr "Покупка Частинами завершена. Видача клієнту підтверджена"
 
-#: includes/class.part-pay-method.php:19 includes/class.part-pay-method.php:50
-msgid "Mono Part Pay Method"
-msgstr "Покупка частинами. Моно"
-
 #: includes/class.mono-api.php:541
 msgid "Mono Part Pay method cancelled by shop admin"
 msgstr "Покупка частинами скасована менеджером магазину"
@@ -140,26 +121,10 @@ msgstr "ID заявки:"
 msgid "Mono Pay Status:"
 msgstr "Статус заявки:"
 
-#: includes/class.settings.php:20
-msgid "Mono Pay-part"
-msgstr "\"Покупка частинами\". Моно"
-
 #. Name of the plugin
-msgid "Mono Pay-Part Gateway"
-msgstr "\"Покупка частинами\". Моно"
-
-#: includes/class.settings.php:19 includes/class.settings.php:261
-msgid "Mono Pay-part Settings"
-msgstr "Налаштування Моно \"Покупки частинами\"."
-
-#: includes/class.part-pay-method.php:82
-#, php-format
-msgctxt "Number of payments"
-msgid "%s payment"
-msgid_plural "%s payments"
-msgstr[0] "платіж"
-msgstr[1] "платежі"
-msgstr[2] "платежів"
+msgid "Monobank Hire Purchase Gateway"
+msgstr ""
+"Платіжний метод \"Покупка частинами монобанк\"\n"
 
 #: includes/class.settings.php:245
 msgid "Only numbers between 3 and 25 are allowed. These values were rejected: "
@@ -171,10 +136,6 @@ msgid ""
 msgstr ""
 "Статус замовлення змінився. Перезавантажте сторінку щоб побачити "
 "найактувальніші дані"
-
-#: includes/class.part-pay-method.php:57
-msgid "Pay using Mono Part Pay Method."
-msgstr "Оплата \"Покупкою частинами\""
 
 #: includes/class.settings.php:173
 msgid "Payment Method Logo"
@@ -208,7 +169,7 @@ msgstr "Перезавантажити"
 msgid "Remove Image"
 msgstr "Видалити зображення"
 
-#: mono-pay-part.php:92
+#: woo-monobank-hire-purchase.php:92
 msgid "Restare Mono Pay-part requires WooCommerce to be active."
 msgstr "reStare + Моно \"Покупка частинами\" потребує активованого WooCommerce"
 
@@ -232,7 +193,7 @@ msgstr "Налаштування"
 msgid "Shipment status"
 msgstr "Статус видачі клієнту"
 
-#: mono-pay-part.php:46
+#: woo-monobank-hire-purchase.php:46
 msgid "Shortcode copied to clipboard!"
 msgstr "Шорткод скопійовано в буфер обміну!"
 
@@ -264,21 +225,9 @@ msgstr ""
 "одночасно забезпечуючи оновлення статусу платежу в реальному часі та "
 "управління замовленнями."
 
-#: includes/class.part-pay-method.php:56
-msgid "This controls the description which the user sees during checkout."
-msgstr "Це текст, який користувач бачить під час оформлення замовлення.​"
-
-#: includes/class.part-pay-method.php:49
-msgid "This controls the title which the user sees during checkout."
-msgstr "Це назва, яку користувач бачить під час оформлення замовлення."
-
 #: includes/class.settings.php:180
 msgid "This logo is displayed on a checkout page."
 msgstr "Логотип який відображається при оформленні замовлення"
-
-#: includes/class.part-pay-method.php:47
-msgid "Title"
-msgstr "Назва"
 
 #: includes/class.mono-api.php:181
 msgid "Unknown payment status via Mono Part Pay."
@@ -293,9 +242,12 @@ msgid "View Documentation"
 msgstr "Перейти до документації"
 
 #: includes/class.settings.php:194
+#| msgid ""
+#| "You can place this banner anywhere using <code>[mono_pay_part_banner]"
+#| "</code> shortcode"
 msgid ""
-"You can place this banner anywhere using <code>[mono_pay_part_banner]</code> "
-"shortcode"
+"You can place this banner anywhere using <code>[mono_hire_purchase_banner]"
+"</code> shortcode"
 msgstr ""
 "Ви можете вивести даний банер будь-де за допомогою <code>"
-"[mono_pay_part_banner]</code> шорткоду"
+"[mono_hire_purchase_banner]</code> шорткоду"
